--- a/pages/css/styles.css
+++ b/pages/css/styles.css
@@ -2,13 +2,22 @@
     --cor--amarela: #fff000;
     --cor--preta: #000000;
 }
+
+.h100-vh{
+    height: 100vh;
+}
+
 .cont-star{
-    width: 50px;
-    height: 50px;
+    min-width: 50px;
+    min-height: 50px;
 
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.icon-star{
+    font-size: 2em;
 }
 
 .icon-star-acitive{
@@ -35,11 +44,12 @@
     }
 }
 
-
 input[type='radio']{
     display: none !important;
 }
 
 input[type='radio']::before, input[type='radio']::after{
+    width: 0px;
+    height: 0px;
     display: none;
 }
